// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="RadioButton"
>
  <input
    aria-label="radio-button"
    class="ControlledInput"
    data-test-id="cf-ui-radio-button"
    type="radio"
    value=""
  />
  <label
    class="RadioButton__ghost"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="my-extra-class RadioButton"
>
  <input
    aria-label="radio-button"
    class="ControlledInput"
    data-test-id="cf-ui-radio-button"
    type="radio"
    value=""
  />
  <label
    class="RadioButton__ghost"
  />
</div>
`;
